force-app/main/default/objects/Loop__Related_Object__c/Loop__Related_Object__c.object-meta.xml
<CustomObject>
    <label>Relationship</label>
    <nameField>
        <label>Relationship (What you want)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>