force-app/main/default/objects/Loop__Related_Object__c/fields/Loop__Delete_Table__c.field-meta.xml
<CustomField>
    <fullName>Loop__Delete_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, this specifies that you want the table(s) for this object to be deleted if there are no records in the list.</inlineHelpText>
    <label>Delete Table (if no records)</label>
    <type>Checkbox</type>
</CustomField>