force-app/main/default/objects/Loop__Related_Object__c/fields/Loop__Index__c.field-meta.xml
<CustomField>
    <fullName>Loop__Index__c</fullName>
    <label>#</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>