force-app/main/default/objects/Loop__Related_Object__c/fields/Loop__Related_Object_Alias__c.field-meta.xml
<CustomField>
    <fullName>Loop__Related_Object_Alias__c</fullName>
    <inlineHelpText>Use this field to distinguish between two or more of the same related object. The value entered here will replace the object name in all merge tags. Salesforce Field Name validation rules apply.</inlineHelpText>
    <label>Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>